src/tui/snapshots/control_acceso__tui__visual_tests__Login_80x24_Classic.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                
                                   BRISAS CLI                                   
                                                                                
 ────────────────────────────────────────────────────────────────────────────── 
                                                                                
                                                                                
                                                                                
                                                                                
                                INICIO DE SESIÓN                                
                                                                                
                 ▶ CÉDULA                                                       
                                                                                
                 ──────────────────────────────────────────────                 
                                                                                
                   CONTRASEÑA                                                   
                                                                                
                 ──────────────────────────────────────────────                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 TAB/↑↓ Cambiar campo  ENTER Continuar  ESC/Ctrl+C Salir  F7 Tema               
                                                                                

=== estilos ===
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                  BRISAS CLI                                  " fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"               INICIO DE SESIÓN               " fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"▶ CÉDULA                                      " fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"  CONTRASEÑA                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                 " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                              " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"TAB/↑↓" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Cambiar campo  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ENTER" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Continuar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ESC/Ctrl+C" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Salir  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F7" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Tema               " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                " fg=Rgb(196, 220, 199) bg=Black mod=NONE
