src/tui/snapshots/control_acceso__tui__visual_tests__Login_99x30_Brisas.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                ┌────────────────────────────────┐                                 
                                │                                │                                 
                                └────────────────────────────────┘                                 
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   

=== estilos ===
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"┌────────────────────────────────┐" fg=White bg=Black mod=NONE
"                                 " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"│" fg=White bg=Black mod=NONE
"                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"│" fg=White bg=Black mod=NONE
"                                 " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"└────────────────────────────────┘" fg=White bg=Black mod=NONE
"                                 " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
